--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "lint:fix": "yarn lint:all:fix",
     "lint:scripts": "eslint --ignore-path .gitignore **/*.{js,jsx,cjs,json,ts,tsx}",
     "lint:scripts:fix": "yarn lint:scripts --fix",
-    "lint:styles": "stylelint --ignore-path .gitignore **/*.css",
     "lint:styles:fix": "yarn lint:styles --fix",
     "prepare": "husky install",
     "serve": "cross-env NODE_ENV=development webpack serve --config webpack.config.babel.js",
@@ -92,11 +91,6 @@
     "postcss-url": "^10.1.3",
     "prettier": "^3.1.0",
     "style-loader": "^3.3.3",
-    "stylelint": "^15.11.0",
-    "stylelint-config-recess-order": "^4.4.0",
-    "stylelint-config-standard": "^34.0.0",
-    "stylelint-prettier": "^4.1.0",
-    "stylelint-webpack-plugin": "^4.1.1",
     "terser-webpack-plugin": "^5.3.9",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.5.1",
@@ -110,5 +104,11 @@
   "copyright": "2013",
   "target": "web",
   "title": "Typescript Webpack Boilerplate",
-  "url": "URL"
+  "url": "URL",
+  "dependencies": {
+    "@babylonjs/core": "^6.37.1",
+    "@babylonjs/gui": "^6.37.1",
+    "@babylonjs/inspector": "^6.37.1",
+    "@babylonjs/materials": "^6.37.1"
+  }
 }
