--- a/package.json
+++ b/package.json
@@ -52,6 +52,9 @@
     "@babel/preset-env": "^7.23.5",
     "@babel/preset-typescript": "^7.23.3",
     "@babel/register": "^7.22.15",
+    "@babylonjs/gui-editor": "^6.37.1",
+    "@babylonjs/loaders": "^6.37.1",
+    "@babylonjs/serializers": "^6.37.1",
     "@types/jest": "^29.5.10",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
